--- a/clubok_be/pom.xml
+++ b/clubok_be/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>clubok_be</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
+        <finalName>clubok-1.0-SNAPHSOT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
