--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^3.0.2"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "react-router-dom": "^4.2.2"
   }
 }
