--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "js-cookie": "^2.2.0",
     "react-router-dom": "^4.2.2"
   }
 }
