--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "js-cookie": "^2.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-react": "^0.79.1"
   }
 }
