Add frontend live editting

--- a/clubok_fe/pom.xml
+++ b/clubok_fe/pom.xml
@@ -44,7 +44,8 @@
                         <fileset>
                             <directory>../clubok_be/src/main/resources/public/</directory>
                             <excludes>
-                                <exclude>index.html</exclude>
+                                <exclude>*.html</exclude>
+                                <exclude>images/</exclude>
                             </excludes>
                             <followSymlinks>false</followSymlinks>
                         </fileset>
