--- a/clubok_fe/.babelrc
+++ b/clubok_fe/.babelrc
@@ -1,7 +1,19 @@
 {
-  "presets": [
-    "env",
-    "react",
-    "stage-2"
-  ]
+  "env": {
+    "development": {
+      "presets": [
+        "env",
+        "react",
+        "stage-2",
+        "react-hmre"
+      ]
+    },
+    "production": {
+      "presets": [
+        "env",
+        "react",
+        "stage-2"
+      ]
+    }
+  }
 }
