--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -5,28 +5,30 @@
   "repository": "https://github.com/alexeymuryshkin/ClubOk",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p",
-    "start:dev": "webpack-dev-server"
+    "build": "export BABEL_ENV=production || SET \"BABEL_ENV=production\" && webpack -p",
+    "start:dev": "webpack-dev-server --progress --inline --hot"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
     "less": "^2.3.1",
-    "less-loader": "^4.0.6",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.4.1"
+    "less-loader": "^4.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "style-loader": "^0.20.3",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
     "js-cookie": "^2.2.0",
     "react-router-dom": "^4.2.2",
     "semantic-ui-react": "^0.79.1"
