--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -20,8 +20,10 @@
     "css-loader": "^0.28.11",
     "less": "^2.3.1",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.2"
