Fix BE tests Update webpack and POM.xml Set React environment

--- a/clubok_fe/.babelrc
+++ b/clubok_fe/.babelrc
@@ -1,19 +1,9 @@
 {
-  "env": {
-    "development": {
-      "presets": [
-        "env",
-        "react",
-        "stage-2",
-        "react-hmre"
-      ]
-    },
-    "production": {
-      "presets": [
-        "env",
-        "react",
-        "stage-2"
-      ]
-    }
-  }
+  "presets": [
+    "env",
+    "react"
+  ],
+  "plugins": [
+    "transform-class-properties"
+  ]
 }
