--- a/clubok_be/pom.xml
+++ b/clubok_be/pom.xml
@@ -16,6 +16,19 @@
         <finalName>clubok-1.0</finalName>
 
         <plugins>
+            <!-- Clean resources-->
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>./src/main/resources/public/</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
