--- a/clubok_fe/package.json
+++ b/clubok_fe/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "clubok_fe",
+  "name": "Clubok",
   "version": "1.0.0",
-  "description": "Frontend of the Clubok",
+  "description": "Web Social Network for University Clubs",
   "repository": "https://github.com/alexeymuryshkin/ClubOk",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "export BABEL_ENV=production || SET \"BABEL_ENV=production\" && webpack -p",
-    "start:dev": "webpack-dev-server --progress --inline --hot"
+    "serve": "live-server public/",
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Anuar Otynshin <strigeandro@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
-    "less": "^2.3.1",
-    "less-loader": "^4.1.0",
+    "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2"
-  },
-  "dependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-loader": "^0.5.5",
-    "js-cookie": "^2.2.0",
+    "react-modal": "^3.4.4",
     "react-router-dom": "^4.2.2",
-    "semantic-ui-react": "^0.79.1"
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "validator": "^10.2.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
