--- a/clubok_be/pom.xml
+++ b/clubok_be/pom.xml
@@ -189,5 +189,10 @@
             <artifactId>javax.el</artifactId>
             <version>2.2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-template-velocity</artifactId>
+            <version>2.7.1</version>
+        </dependency>
     </dependencies>
 </project>
