--- a/clubok_fe/pom.xml
+++ b/clubok_fe/pom.xml
@@ -59,27 +59,28 @@
                 <version>1.6</version>
                 <executions>
                     <execution>
-                        <id>install node and npm</id>
+                        <id>install node and yarn</id>
                         <goals>
-                            <goal>install-node-and-npm</goal>
+                            <goal>install-node-and-yarn</goal>
                         </goals>
                         <configuration>
                             <nodeVersion>v8.11.2</nodeVersion>
+                            <yarnVersion>v1.6.0</yarnVersion>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>npm install</id>
+                        <id>yarn install</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>yarn</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>npm run build</id>
+                        <id>yarn run build:prod</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>yarn</goal>
                         </goals>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <arguments>run build:prod</arguments>
                         </configuration>
                     </execution>
                 </executions>
